--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       overflow: hidden;
     }
 
-    /* Loading screen */
     #loadingScreen {
       position: fixed;
       background-color: #0f0f1f;
@@ -46,7 +45,6 @@
       100% { transform: rotate(360deg); }
     }
 
-    /* PIN & Modal */
     #pinScreen, .modal {
       position: fixed;
       background: rgba(0, 0, 0, 0.6);
@@ -74,19 +72,16 @@
       gap: 10px;
     }
 
-    input, textarea, select {
+    input {
       padding: 12px;
-      font-size: 1.2rem;
-      border-radius: 8px;
-      border: none;
-      margin-top: 5px;
-      width: 100%;
-    }
-
-    input[type="text"] {
+      font-size: 1.5rem;
       text-align: center;
       width: 50px;
       height: 50px;
+      border-radius: 8px;
+      border: none;
+      background-color: #fff;
+      color: #333;
     }
 
     button {
@@ -156,13 +151,13 @@
 </head>
 <body>
 
-  <!-- Loading -->
+  <!-- Loading screen -->
   <div id="loadingScreen">
     <div class="loader"></div>
     <p id="loadingText"></p>
   </div>
 
-  <!-- PIN -->
+  <!-- PIN input -->
   <div id="pinScreen" style="display:none">
     <div class="pin-box">
       <h2>Masukkan Kode Rahasia 🎁</h2>
@@ -194,8 +189,8 @@
   <div id="mainContent">
     <h1>🎉 Selamat Ulang Tahun!</h1>
     <p>
-      Hari ini adalah hari istimewa untuk orang yang luar biasa. Semoga harimu dipenuhi dengan kebahagiaan, tawa, dan cinta. <br><br>
-      Jangan lupa bahwa kamu sangat berharga dan dicintai. Terima kasih telah menjadi kamu. ❤️<br><br>
+      Hari ini adalah hari istimewa untuk orang yang luar biasa. Semoga harimu dipenuhi dengan kebahagiaan, tawa, dan cinta. <br /><br />
+      Jangan lupa bahwa kamu sangat berharga dan dicintai. Terima kasih telah menjadi kamu. ❤️<br /><br />
       Nikmati hadiah kecil ini 🎁
     </p>
     <a href="https://github.com/mamadcreative" target="_blank">
@@ -227,21 +222,21 @@
     </form>
   </div>
 
-  <!-- Musik dan ketikan -->
+  <!-- Musik latar -->
   <audio id="bgMusic" loop>
     <source src="music.mp3" type="audio/mpeg" />
   </audio>
 
+  <!-- Suara ketikan hanya untuk input PIN -->
   <audio id="typeSound">
     <source src="type.mp3" type="audio/mpeg" />
   </audio>
 
-  <!-- Script -->
   <script>
-    // Loading animation
     const loadingTextElement = document.getElementById("loadingText");
     const loadingBaseText = "SAKEDAP...";
-    let repeat = 0, i = 0;
+    let repeat = 0;
+    let i = 0;
 
     function typeWriterRepeat() {
       if (i < loadingBaseText.length) {
@@ -273,18 +268,29 @@
       if (currentInput.value.length === currentInput.maxLength && nextId) {
         document.getElementById(nextId).focus();
       }
-      document.getElementById("typeSound").play();
+
+      const typeSound = document.getElementById("typeSound");
+      typeSound.currentTime = 0;
+      typeSound.play();
     }
 
     function moveFocusOnBackspace(event, currentId, previousId) {
       const currentInput = document.getElementById(currentId);
-      if (event.key === 'Backspace' && currentInput.value === '' && previousId) {
-        document.getElementById(previousId).focus();
+      if (event.key === 'Backspace' && currentInput.value === '') {
+        if (previousId) {
+          document.getElementById(previousId).focus();
+        }
       }
     }
 
     function checkPin() {
-      const pin = [...Array(6).keys()].map(i => document.getElementById('pin' + (i+1)).value).join('');
+      const pin = document.getElementById('pin1').value +
+                  document.getElementById('pin2').value +
+                  document.getElementById('pin3').value +
+                  document.getElementById('pin4').value +
+                  document.getElementById('pin5').value +
+                  document.getElementById('pin6').value;
+
       const error = document.getElementById('pinError');
       if (pin === '180404') {
         document.getElementById('pinScreen').style.display = 'none';
@@ -300,10 +306,11 @@
     }
 
     function startMusic() {
-      document.getElementById('bgMusic').play();
+      const music = document.getElementById('bgMusic');
+      music.play();
       document.getElementById('musicModal').style.display = 'none';
       document.getElementById('mainContent').style.display = 'flex';
-      showQuestionnaire();
+      setTimeout(showQuestionnaire, 1500); // Munculkan kuisioner setelah 1.5 detik
     }
 
     document.getElementById("formQ").addEventListener("submit", function(e) {
@@ -318,7 +325,9 @@
       fetch("https://script.google.com/macros/s/AKfycbwSneX8Z_MLc6WKRVtlHx6AL7TQRH3XEDQj1UzjWVJ2-9e7CjyWFG-piqoZJ2t7z-6Fcw/exec", {
         method: 'POST',
         body: JSON.stringify(data),
-        headers: { 'Content-Type': 'application/json' },
+        headers: {
+          'Content-Type': 'application/json',
+        },
       })
       .then(res => {
         alert("🎉 Terima kasih! Jawabanmu sudah terkirim!");
@@ -328,7 +337,3 @@
         alert("Ups! Gagal mengirim. Coba lagi ya.");
         console.error(err);
       });
-    });
-  </script>
-</body>
-</html>
