--- a/index.html
+++ b/index.html
@@ -337,3 +337,8 @@
         alert("Ups! Gagal mengirim. Coba lagi ya.");
         console.error(err);
       });
+    });
+  </script>
+
+</body>
+</html>
