--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hadiah Ulang Tahun 🎉</title>
+  <title>Selamat Ulang Tahun!</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- PIN Verification -->
-  <div class="pin-section">
-    <input type="text" id="pin6" maxlength="1" oninput="moveFocus('pin6', null)" onkeydown="moveFocusOnBackspace(event, 'pin6', 'pin5')" />
-    <br />
-    <button onclick="checkPin()">Buka</button>
-    <div class="error" id="pinError"></div>
-  </div>
-
   <!-- Modal Musik -->
-  <div class="modal" id="musicModal" style="display:none">
+  <div class="modal" id="musicModal" style="display: none;">
     <div class="modal-content">
       <h2>🎵 Musik Latar</h2>
       <p>Klik untuk memainkan musik spesial 🎶</p>
@@ -28,8 +20,8 @@
   <div id="mainContent">
     <h1>🎉 Selamat Ulang Tahun!</h1>
     <p>
-      Hari ini adalah hari istimewa untuk orang yang luar biasa. Semoga harimu dipenuhi dengan kebahagiaan, tawa, dan cinta. <br /><br />
-      Jangan lupa bahwa kamu sangat berharga dan dicintai. Terima kasih telah menjadi kamu. ❤️<br /><br />
+      Hari ini adalah hari istimewa untuk orang yang luar biasa. Semoga harimu dipenuhi dengan kebahagiaan, tawa, dan cinta. <br><br>
+      Jangan lupa bahwa kamu sangat berharga dan dicintai. Terima kasih telah menjadi kamu. ❤️<br><br>
       Nikmati hadiah kecil ini 🎁
     </p>
   </div>
